Feature/spring boot 4.0.0 (#15)
Upgraded to Spring Boot 4.0.0 and Spring Cloud 2025.1