@@ -1,53 +1,55 @@
 package ca.zhoozhoo.loaddev.common.jackson;
 
 import static javax.money.Monetary.getCurrency;
-
-import java.io.IOException;
+import static org.javamoney.moneta.Money.of;
 
 import javax.money.MonetaryAmount;
 
-import org.javamoney.moneta.Money;
+// (Using static import org.javamoney.moneta.Money.of)
 
-import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.databind.DeserializationContext;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
+import tools.jackson.core.JacksonException;
+import tools.jackson.core.JsonParser;
+import tools.jackson.databind.DeserializationContext;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.deser.std.StdDeserializer;
+
 
 /**
  * Jackson deserializer for JSR-354 {@link MonetaryAmount} types.
  * <p>
- * Deserializes JSON format: {@code {"amount": 45.99, "currency": "USD"}}
- * to {@link MonetaryAmount} objects.
+ * Deserializes JSON objects of the form {@code {"amount": 45.99, "currency": "USD"}}
+ * into {@link MonetaryAmount}.
+ * </p>
+ * <p>
+ * Validation: both {@code amount} and {@code currency} must be present and non-null.
  * </p>
  *
  * @author Zhubin Salehi
+ * @see MonetaryAmountSerializer
  */
-class MonetaryAmountDeserializer extends StdDeserializer<MonetaryAmount> {
-
-    private static final long serialVersionUID = 1L;
+public class MonetaryAmountDeserializer extends StdDeserializer<MonetaryAmount> {
 
     public MonetaryAmountDeserializer() {
         super(MonetaryAmount.class);
     }
 
     @Override
-    public MonetaryAmount deserialize(JsonParser parser, DeserializationContext context) throws IOException {
-        var codec = parser.getCodec();
-        JsonNode root = codec.readTree(parser);
-        
+    public MonetaryAmount deserialize(JsonParser parser, DeserializationContext context) throws JacksonException {
+        JsonNode root = parser.objectReadContext().readTree(parser);
+
         var amountNode = root.get("amount");
         var currencyNode = root.get("currency");
-        
+
         validateRequiredField(amountNode, "amount");
         validateRequiredField(currencyNode, "currency");
-        
-        return Money.of(amountNode.decimalValue(), getCurrency(currencyNode.asText()));
+
+        return of(amountNode.decimalValue(), getCurrency(currencyNode.asString()));
     }
 
     private void validateRequiredField(JsonNode node, String fieldName) {
         if (node == null || node.isNull()) {
             throw new IllegalArgumentException(
-                String.format("Missing required field '%s' in MonetaryAmount JSON", fieldName));
+                    "Missing required field '%s' in MonetaryAmount JSON".formatted(fieldName));
         }
     }
 }
